Update test data structure

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,8 +6,8 @@ manifest {
 }
 
 params {
-  reads = 'data/reads/*_{1,2}.fastq.gz'
-  reference = 'data/NCTC13753.gbk'
+  reads = 'data/multiple_replicons/reads/*_{1,2}.fastq.gz'
+  reference = 'data/multiple_replicons/NCTC13753.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
   help = false
