Greatly simplify data flow

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@ manifest {
 }
 
 params {
+  //reads = 'data/multiple_replicons/subset_reads/*_{1,2}*sub*.fastq.gz'
   reads = 'data/multiple_replicons/reads/*_{1,2}.fastq.gz'
   reference = 'data/multiple_replicons/NCTC13753.gbk'
   output_dir = 'output'
