Add executor profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,74 @@ manifest {
 }
 
 params {
-  //reads = 'data/multiple_replicons/subset_reads/*_{1,2}*sub*.fastq.gz'
   reads = 'data/multiple_replicons/reads/*_{1,2}.fastq.gz'
   reference = 'data/multiple_replicons/NCTC13753.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
   help = false
+}
+
+profiles {
+  standard {
+    process {
+      executor = 'local'
+      cpus = 4
+    }
+  }
+
+  massive {
+    process {
+      executor = 'slurm'
+      maxRetries = 3
+      cpus = 1
+      memory = { 2.GB * task.attempt }
+      time = { 30.minutes * task.attempt }
+      clusterOptions = {
+        account = 'js66'
+        qos = task.time <= 30.minutes ? 'shortq' : 'normal'
+        return "--account=${account} --qos=${qos}"
+      }
+
+      withName: prepare_reference {
+        executor = 'local'
+      }
+
+      withName: create_mpileups {
+        time = { 10.minutes * task.attempt }
+      }
+
+      withName: gene_coverage_depth {
+        time = { 10.minutes + length(mpileup_fps) * 0.5 }
+        memory = { 1024.MB + length(mpileup_fps) * 20 }
+      }
+
+      withName: call_snps {
+        time = { 10.minutes * task.attempt }
+      }
+
+      withName: calculate_replicon_statistics {
+        time = { 10.minutes * task.attempt }
+      }
+
+      withName: aggregate_replicon_statistics {
+        time = { 10.minutes * task.attempt }
+      }
+
+      withName: aggregate_snp_sites {
+        time = { 10.minutes + length(snp_sites_fps) * 0.5 }
+        memory = { 1024.MB + length(snp_sites_fps) * 10 }
+      }
+
+      withName: create_allele_matrix {
+        time = { 10.minutes * task.attempt }
+      }
+
+      withName: aggregate_allele_matrices {
+        time = { 10.minutes + length(allele_fps) * 0.5 }
+        memory = { 1024.MB + length(allele_fps) * 10 }
+      }
+    }
+  }
 }
 
 dag {
