Improve part/qos selection and resource scaling

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,8 @@ profiles {
       clusterOptions = {
         account = 'js66'
         qos = task.time <= 30.minutes ? 'shortq' : 'normal'
-        return "--account=${account} --qos=${qos}"
+        partition = task.time <= 30.minutes ? 'short,comp' : 'comp'
+        return "--account=${account} --qos=${qos} --partition=${partition}"
       }
 
       withName: prepare_reference {
@@ -43,8 +44,8 @@ profiles {
       }
 
       withName: gene_coverage_depth {
-        time = { 10.minutes + length(mpileup_fps) * 0.5 }
-        memory = { 1024.MB + length(mpileup_fps) * 20 }
+        time = { 10.minutes + (isolate_count * 0.5).minutes }
+        memory = { 1024.MB + (isolate_count * 20).MB }
       }
 
       withName: call_snps {
@@ -60,8 +61,8 @@ profiles {
       }
 
       withName: aggregate_snp_sites {
-        time = { 10.minutes + length(snp_sites_fps) * 0.5 }
-        memory = { 1024.MB + length(snp_sites_fps) * 10 }
+        time = { 10.minutes + (isolate_count * 0.5).minutes }
+        memory = { 1024.MB + (isolate_count * 10).MB }
       }
 
       withName: create_allele_matrix {
@@ -69,8 +70,23 @@ profiles {
       }
 
       withName: aggregate_allele_matrices {
-        time = { 10.minutes + length(allele_fps) * 0.5 }
-        memory = { 1024.MB + length(allele_fps) * 10 }
+        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count * 10).MB }
+      }
+
+      withName: create_snp_alignment {
+        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count * 20).MB }
+      }
+
+      withName: determine_coding_consequences {
+        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count * 20).MB }
+      }
+
+      withName: infer_phylogeny {
+        time = { 10.minutes + (isolate_passing_count * 2).minutes }
+        memory = { 1024.MB + (isolate_passing_count * 20).MB }
       }
     }
   }
