Fix isolate counting and change job name format

--- a/nextflow.config
+++ b/nextflow.config
@@ -111,3 +111,6 @@ trace {
   enabled = true
   file = "${params.run_info_dir}/trace.txt"
 }
+
+// For whatever reason I can't access task.processor.name here so instead we do a string sub
+executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
