--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,11 @@ profiles {
         return "--account=${account} --qos=${qos} --partition=${partition}"
       }
 
+      // NOTE: we must use the `val` attribute on the DataflowVariable object
+      // (isolate_count) here as the call is blocking and causes issues if in
+      // the main pipeline script. Calling within closures is fine as the result
+      // at this point has been evaluated.
+
       withName: prepare_reference {
         executor = 'local'
       }
@@ -44,8 +49,8 @@ profiles {
       }
 
       withName: gene_coverage_depth {
-        time = { 10.minutes + (isolate_count * 0.5).minutes }
-        memory = { 1024.MB + (isolate_count * 20).MB }
+        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
+        memory = { 1024.MB + (isolate_count.val * 20).MB }
       }
 
       withName: call_snps {
@@ -61,8 +66,8 @@ profiles {
       }
 
       withName: aggregate_snp_sites {
-        time = { 10.minutes + (isolate_count * 0.5).minutes }
-        memory = { 1024.MB + (isolate_count * 10).MB }
+        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
+        memory = { 1024.MB + (isolate_count.val * 10).MB }
       }
 
       withName: create_allele_matrix {
@@ -70,23 +75,23 @@ profiles {
       }
 
       withName: aggregate_allele_matrices {
-        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count * 10).MB }
+        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count.val * 10).MB }
       }
 
       withName: create_snp_alignment {
-        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count * 20).MB }
+        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
       }
 
       withName: determine_coding_consequences {
-        time = { 10.minutes + (isolate_passing_count * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count * 20).MB }
+        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
+        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
       }
 
       withName: infer_phylogeny {
-        time = { 10.minutes + (isolate_passing_count * 2).minutes }
-        memory = { 1024.MB + (isolate_passing_count * 20).MB }
+        time = { 10.minutes + (isolate_passing_count.val * 2).minutes }
+        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
       }
     }
   }
@@ -112,5 +117,6 @@ trace {
   file = "${params.run_info_dir}/trace.txt"
 }
 
-// For whatever reason I can't access task.processor.name here so instead we do a string sub
+// For whatever reason I can't access task.processor.name here so instead we do
+// a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
