Explicitly set number of jobs allowed to be queued

--- a/nextflow.config
+++ b/nextflow.config
@@ -117,6 +117,8 @@ trace {
   file = "${params.run_info_dir}/trace.txt"
 }
 
+// SLURM options
 // For whatever reason I can't access task.processor.name here so instead we do
 // a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
+executor.$slurm.queueSize = 100
