--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ profiles {
   massive {
     process {
       executor = 'slurm'
+      errorStrategy = 'retry'
       maxRetries = 3
       cpus = 1
       memory = { 2.GB * task.attempt }
