Bug hunting and improving stablity

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,18 +17,26 @@ profiles {
   standard {
     process {
       executor = 'local'
-      cpus = 4
     }
   }
 
   massive {
     process {
       executor = 'slurm'
+
+      // Retry jobs - typically with more resources
       errorStrategy = 'retry'
       maxRetries = 3
+
+      // Required for consistent resumes on massives NFS
+      cache = 'lenient'
+
+      // Default job resources
       cpus = 1
       memory = { 2.GB * task.attempt }
       time = { 30.minutes * task.attempt }
+
+      // Set options absent from nf slurm api
       clusterOptions = {
         account = 'js66'
         qos = task.time <= 30.minutes ? 'shortq' : 'normal'
