--- a/nextflow.config
+++ b/nextflow.config
@@ -66,11 +66,11 @@ profiles {
         time = { 10.minutes * task.attempt }
       }
 
-      withName: calculate_replicon_statistics {
+      withName: calculate_mapping_statistics {
         time = { 10.minutes * task.attempt }
       }
 
-      withName: aggregate_replicon_statistics {
+      withName: aggregate_mapping_statistics {
         time = { 10.minutes * task.attempt }
       }
 
@@ -127,7 +127,9 @@ trace {
 }
 
 // SLURM options
+// Replace 'nf' in SLURM job name with 'rr'
 // For whatever reason I can't access task.processor.name here so instead we do
 // a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
+// Limit queue size (100 is default)
 executor.$slurm.queueSize = 100
