Check user inputs and require profile on MASSIVE

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,8 @@ params {
   reference = 'data/multiple_replicons/NCTC13753.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
+
+  force = false
   help = false
 }
 
