Add fastqc step and optional tree building

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,11 +6,16 @@ manifest {
 }
 
 params {
+  // Input and output
   reads = 'data/multiple_replicons/reads/*_{1,2}.fastq.gz'
   reference = 'data/multiple_replicons/NCTC13753.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
 
+  // Optional stages
+  quality_assessment = true
+
+  // Misc
   force = false
   help = false
 }
