Add read subsampling

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,8 @@ params {
   run_info_dir = "${output_dir}/run_info/"
 
   // Optional stages
+  subsample_reads = false
+  subsample_read_count = 100000
   quality_assessment = true
   force_tree = false
 
@@ -63,6 +65,10 @@ profiles {
 
       withName: create_mpileups {
         time = { 10.minutes * task.attempt }
+      }
+
+      withName: aggregate_read_quality_reports {
+        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
       }
 
       withName: gene_coverage_depth {
