First pass on DSL2 port

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,8 +7,8 @@ manifest {
 
 params {
   // Input and output
-  reads = 'data/multiple_replicons/reads/*_{1,2}.fastq.gz'
-  reference = 'data/multiple_replicons/NCTC13753.gbk'
+  reads = 'tests/3_simulated_reads/reads/*{1,2}.fastq'
+  reference = 'tests/3_simulated_reads/data/reference.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
 
