More notes for merge run

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,10 @@ params {
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
 
+  // Merge run settings
+  merge_run = false
+  previous_run_dir = ''
+
   // Optional stages
   subsample_reads = false
   subsample_read_count = 100000
