Rename some vars, limit local processes

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,12 @@ params {
   quality_assessment = true
   force_tree = false
 
+  // Executor options
+  // Maximum jobs to submit to the SLURM queue at once
+  queue_size = 100
+  // Number of processors to use for local execution
+  processors = 4
+
   // Misc
   force = false
   help = false
@@ -150,4 +156,7 @@ trace {
 // a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
 // Limit queue size (100 is default)
-executor.$slurm.queueSize = 100
+executor.$slurm.queueSize = params.queue_size
+
+// Local executor options
+executor.$local.queueSize = params.processors
