Expose some parameters in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,11 +22,34 @@ params {
   quality_assessment = true
   force_tree = false
 
+
+  // General settings
+  // Bowtie parameters
+  bt2_max_frag_len = 2000
+  bt2_mode = '--sensitive-local'
+
+  // Minimum depth for variant filtering
+  var_depth_min = 5
+
+  // Mapping stats pass/fail
+  mapping_cover_min = 50
+  mapping_depth_min = 10
+  mapping_mapped_min = 50
+
+  // Ingroup/outgroup threshold modifier, calculated as:
+  //   isolate(reads/coverage) <= data_set_mean(reads/coverage) + data_set_stddev(reads/coverage) * outgroup_mod
+  outgroup_mod = 2
+
+  // Allele matrix filtering conservation - alleles are filtered where less than n isolates have a known allele
+  allele_matrix_cons = 95
+
+
   // Executor options
   // Maximum jobs to submit to the SLURM queue at once
   queue_size = 100
   // Number of processors to use for local execution
   processors = 4
+
 
   // Misc
   force = false
