Integrate merge validation python script

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,9 +12,11 @@ params {
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
 
+
   // Merge run settings
   merge_run = false
-  previous_run_dir = ''
+  merge_ignore_errors = false
+
 
   // Optional stages
   subsample_reads = false
