Commit forgotten parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
   // Merge run settings
   merge_run = false
   merge_ignore_errors = false
+  previous_run_dir = ''
 
 
   // Optional stages
