Various minor changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
   // Optional stages
   subsample_reads = false
   subsample_read_count = 100000
-  quality_assessment = true
+  quality_assessment = false
   force_tree = false
 
 
