--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ NOTES
 .nextflow*
 conda_env/
 output/
+output*/
 !tests/reddog_run/output/
 tests/3_simulated_reads/reads/
 prev/
@@ -11,3 +12,4 @@ reddog/
 testing/
 work/
 script_*
+delete/
