--- a/nextflow.config
+++ b/nextflow.config
@@ -158,22 +158,22 @@ profiles {
 
 dag {
   enabled = true
-  file = "${params.run_info_dir}/dag.svg"
+  file = "${params.run_info_dir}/nextflow/dag.svg"
 }
 
 report {
   enabled = true
-  file = "${params.run_info_dir}/report.html"
+  file = "${params.run_info_dir}/nextflow/report.html"
 }
 
 timeline {
   enabled = true
-  file = "${params.run_info_dir}/timeline.html"
+  file = "${params.run_info_dir}/nextflow/timeline.html"
 }
 
 trace {
   enabled = true
-  file = "${params.run_info_dir}/trace.txt"
+  file = "${params.run_info_dir}/nextflow/trace.txt"
 }
 
 // SLURM options
