Update config and other minor changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ manifest {
 
 params {
   // Input and output
-  reads = 'tests/3_simulated_reads/reads/*{1,2}.fastq'
+  reads = 'tests/3_simulated_reads/reads/*.fastq'
   reference = 'tests/3_simulated_reads/data/reference.gbk'
   output_dir = 'output'
   run_info_dir = "${output_dir}/run_info/"
@@ -77,80 +77,151 @@ profiles {
       // Required for consistent resumes on massives NFS
       cache = 'lenient'
 
-      // Default job resources
-      cpus = 1
-      memory = { 2.GB * task.attempt }
-      time = { 30.minutes * task.attempt }
-
       // Set options absent from nf slurm api
       clusterOptions = {
         account = 'js66'
-        qos = task.time <= 30.minutes ? 'shortq' : 'normal'
-        partition = task.time <= 30.minutes ? 'short,comp' : 'comp'
+        qos = ''
+        partition = ''
+        if (task.time <= 30.minutes) {
+          qos = 'genomics'
+          partition = 'comp,genomics,short'
+        } else if (task.time <= 120.minutes) {
+          qos = 'genomics'
+          partition = 'comp,genomics'
+        } else {
+          qos = 'comp'
+          partition = 'comp'
+        }
         return "--account=${account} --qos=${qos} --partition=${partition}"
       }
 
-      // NOTE: we must use the `val` attribute on the DataflowVariable object
-      // (isolate_count) here as the call is blocking and causes issues if in
-      // the main pipeline script. Calling within closures is fine as the result
-      // at this point has been evaluated.
+      // Alignment and variant calling processes
+      withName: align_reads_se {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
 
+      withName: align_reads_pe {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: call_snps {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      // Mapping stats processes
+      withName: calculate_gene_coverage_depth {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: calculate_mapping_statistics {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: aggregate_mapping_statistics {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: get_passing_replicons {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      // Allele matrix processes
+      withName: create_allele_matrix {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: aggregate_allele_matrices {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: filter_allele_matrix {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      // Other processes
       withName: prepare_reference {
         executor = 'local'
       }
 
+      withName: subsample_reads_se {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: subsample_reads_pe {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: create_read_quality_report {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
       withName: create_mpileups {
-        time = { 10.minutes * task.attempt }
-      }
-
-      withName: aggregate_read_quality_reports {
-        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
-      }
-
-      withName: gene_coverage_depth {
-        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
-        memory = { 1024.MB + (isolate_count.val * 20).MB }
-      }
-
-      withName: call_snps {
-        time = { 10.minutes * task.attempt }
-      }
-
-      withName: calculate_mapping_statistics {
-        time = { 10.minutes * task.attempt }
-      }
-
-      withName: aggregate_mapping_statistics {
-        time = { 10.minutes * task.attempt }
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
       }
 
       withName: aggregate_snp_sites {
-        time = { 10.minutes + (isolate_count.val * 0.5).minutes }
-        memory = { 1024.MB + (isolate_count.val * 10).MB }
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
       }
 
-      withName: create_allele_matrix {
-        time = { 10.minutes * task.attempt }
-      }
-
-      withName: aggregate_allele_matrices {
-        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count.val * 10).MB }
-      }
-
-      withName: create_snp_alignment {
-        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
+      withName: aggregate_read_quality_reports {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
       }
 
       withName: determine_coding_consequences {
-        time = { 10.minutes + (isolate_passing_count.val * 0.5).minutes }
-        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: create_snp_alignment {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
       }
 
       withName: infer_phylogeny {
-        time = { 10.minutes + (isolate_passing_count.val * 2).minutes }
-        memory = { 1024.MB + (isolate_passing_count.val * 20).MB }
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      // Merge processes
+      withName: merge:index_bam {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: merge:gene_depth {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: merge:gene_coverage {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: merge:mapping_stats {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
+      }
+
+      withName: merge:collect_snp_sites {
+        time = { 60.minutes * task.attempt }
+        memory = { 4096.MB * task.attempt }
       }
     }
   }
