Fix QoS for long jobs

--- a/nextflow.config
+++ b/nextflow.config
@@ -89,7 +89,7 @@ profiles {
           qos = 'genomics'
           partition = 'comp,genomics'
         } else {
-          qos = 'comp'
+          qos = 'normal'
           partition = 'comp'
         }
         return "--account=${account} --qos=${qos} --partition=${partition}"
