Update config and test CMDS

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,9 +7,9 @@ manifest {
 
 params {
   // Input and output
-  reads = 'tests/3_simulated_reads/reads/*.fastq'
-  reference = 'tests/3_simulated_reads/data/reference.gbk'
-  output_dir = 'output'
+  reads = 'reads/*.fastq'
+  reference = 'data/reference.gbk'
+  output_dir = 'output/'
   run_info_dir = "${output_dir}/run_info/"
 
 
