Set queue size to 200

--- a/nextflow.config
+++ b/nextflow.config
@@ -49,7 +49,7 @@ params {
 
   // Executor options
   // Maximum jobs to submit to the SLURM queue at once
-  queue_size = 100
+  queue_size = 200
   // Number of processors to use for local execution
   processors = 4
 
@@ -252,7 +252,7 @@ trace {
 // For whatever reason I can't access task.processor.name here so instead we do
 // a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
-// Limit queue size (100 is default)
+// Limit queue size
 executor.$slurm.queueSize = params.queue_size
 
 // Local executor options
