Limit rate jobs at submitted to SLURM queue

--- a/nextflow.config
+++ b/nextflow.config
@@ -252,6 +252,8 @@ trace {
 // For whatever reason I can't access task.processor.name here so instead we do
 // a string sub to achieve desired result
 executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
+// Limit submission rate to 2 per second
+executor.$slurm.submitRateLimit = '2/1.seconds'
 // Limit queue size
 executor.$slurm.queueSize = params.queue_size
 
