Clean up config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,13 @@
+includeConfig 'config/slurm_job.config'
+
+
 manifest {
   description = 'RedDog mapping pipeline, nextflow implementation'
   author = 'Nextflow implementation: Stephen Watts; Original pipeline: David Edwards, Bernie Pope, Kat Holt'
   homePage = 'https://github.com/scwatts/reddog-nf'
   nextflowVersion = '>=20.01.0'
 }
+
 
 params {
   // Input and output
@@ -59,20 +63,25 @@ params {
   help = false
 }
 
+
 profiles {
-  standard {
-    process {
-      executor = 'local'
-    }
-  }
-
   massive {
-    process {
-      executor = 'slurm'
+    executor {
+      name = 'slurm'
+      // Queue size
+      queueSize = params.queue_size
+      // Submission rate to 2 per second
+      submitRateLimit = '2/1.seconds'
+      // Modify job-name, replace 'nf' with 'rr'
+      // For whatever reason I can't access task.processor.name here so instead we do
+      // a string sub to achieve desired result
+      jobName = { "rr-${task.name}".replace(' ', '_') }
+    }
 
+    process {
       // Retry jobs - typically with more resources
-      errorStrategy = 'retry'
       maxRetries = 3
+      errorStrategy = { task.attempt < task.maxRetries ? 'retry' : 'ignore' }
 
       // Required for consistent resumes on massives NFS
       cache = 'lenient'
@@ -94,139 +103,19 @@ profiles {
         }
         return "--account=${account} --qos=${qos} --partition=${partition}"
       }
+    }
+  }
 
-      // Alignment and variant calling processes
-      withName: align_reads_se {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: align_reads_pe {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: call_snps {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      // Mapping stats processes
-      withName: calculate_gene_coverage_depth {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: calculate_mapping_statistics {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: aggregate_mapping_statistics {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: get_passing_replicons {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      // Allele matrix processes
-      withName: create_allele_matrix {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: aggregate_allele_matrices {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: filter_allele_matrix {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      // Other processes
-      withName: prepare_reference {
-        executor = 'local'
-      }
-
-      withName: subsample_reads_se {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: subsample_reads_pe {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: create_read_quality_report {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: create_mpileups {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: aggregate_snp_sites {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: aggregate_read_quality_reports {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: determine_coding_consequences {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: create_snp_alignment {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: infer_phylogeny {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      // Merge processes
-      withName: merge:index_bam {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: merge:gene_depth {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: merge:gene_coverage {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: merge:mapping_stats {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
-
-      withName: merge:collect_snp_sites {
-        time = { 60.minutes * task.attempt }
-        memory = { 4096.MB * task.attempt }
-      }
+  standard {
+    executor {
+        name = 'local'
+        queueSize = params.processors
     }
   }
 }
 
+
+// Nextflow run info outputs
 dag {
   enabled = true
   file = "${params.run_info_dir}/nextflow/dag.svg"
@@ -246,16 +135,3 @@ trace {
   enabled = true
   file = "${params.run_info_dir}/nextflow/trace.txt"
 }
-
-// SLURM options
-// Replace 'nf' in SLURM job name with 'rr'
-// For whatever reason I can't access task.processor.name here so instead we do
-// a string sub to achieve desired result
-executor.$slurm.jobName = { "rr-${task.name}".replace(' ', '_') }
-// Limit submission rate to 2 per second
-executor.$slurm.submitRateLimit = '2/1.seconds'
-// Limit queue size
-executor.$slurm.queueSize = params.queue_size
-
-// Local executor options
-executor.$local.queueSize = params.processors
