Fix ingroup/outgroup calculation

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ params {
   mapping_mapped_min = 50
 
   // Ingroup/outgroup threshold modifier, calculated as:
-  //   isolate(reads/coverage) <= data_set_mean(reads/coverage) + data_set_stddev(reads/coverage) * outgroup_mod
+  //   isolate(snps/coverage) <= data_set_mean(snps/coverage) + data_set_stddev(snps/coverage) * outgroup_mod
   outgroup_mod = 2
 
   // Allele matrix filtering conservation - alleles are filtered where less than n isolates have a known allele
