Expose allele matrix min support in nf config

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,7 +47,10 @@ params {
   //   isolate(snps/coverage) <= data_set_mean(snps/coverage) + data_set_stddev(snps/coverage) * outgroup_mod
   outgroup_mod = 2
 
-  // Allele matrix filtering conservation - alleles are filtered where less than n isolates have a known allele
+  // Allele matrix SNP support
+  allele_matrix_support = 90
+
+  // Allele matrix filtering
   allele_matrix_cons = 95
 
 
