Renaming previous_run_dir to existing_run_dir

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,8 @@ params {
 
   // Merge run settings
   merge_run = false
+  existing_run_dir = ''
   merge_ignore_errors = false
-  previous_run_dir = ''
 
 
   // Optional stages
