Minor changes to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ params {
   run_info_dir = "${output_dir}/run_info/"
 
 
-  // Merge run settings
+  // Merge run
   merge_run = false
   existing_run_dir = ''
   merge_ignore_errors = false
@@ -30,7 +30,7 @@ params {
   force_tree = false
 
 
-  // General settings
+  // General
   // Bowtie parameters
   bt2_max_frag_len = 2000
   bt2_mode = '--sensitive-local'
@@ -54,11 +54,13 @@ params {
   allele_matrix_cons = 95
 
 
-  // Executor options
+  // Executor
   // Maximum jobs to submit to the SLURM queue at once
   queue_size = 200
   // Number of processors to use for local execution
   processors = 4
+  // Account for SLURM
+  slurm_account = 'js66'
 
 
   // Misc
@@ -91,7 +93,6 @@ profiles {
 
       // Set options absent from nf slurm api
       clusterOptions = {
-        account = 'js66'
         qos = ''
         partition = ''
         if (task.time <= 30.minutes) {
@@ -104,7 +105,7 @@ profiles {
           qos = 'normal'
           partition = 'comp'
         }
-        return "--account=${account} --qos=${qos} --partition=${partition}"
+        return "--account=${params.slurm_account} --qos=${qos} --partition=${partition}"
       }
     }
   }
