Fix job resubmission

--- a/nextflow.config
+++ b/nextflow.config
@@ -55,6 +55,8 @@ params {
 
 
   // Executor
+  // Maximum retries before ignoring job
+  max_retries = 3
   // Maximum jobs to submit to the SLURM queue at once
   queue_size = 200
   // Number of processors to use for local execution
@@ -85,8 +87,10 @@ profiles {
 
     process {
       // Retry jobs - typically with more resources
-      maxRetries = 3
-      errorStrategy = { task.attempt < task.maxRetries ? 'retry' : 'ignore' }
+      // NOTE: referencing task.maxRetries in the errorStrategy closure causes a recursion loop in nf
+      // during task resubmission and crashes due to a stack overflow; must be specified as done below
+      maxRetries = params.max_retries
+      errorStrategy = { task.attempt < params.max_retries ? 'retry' : 'ignore' }
 
       // Required for consistent resumes on massives NFS
       cache = 'lenient'
