Note version of NF for jobname rename

--- a/nextflow.config
+++ b/nextflow.config
@@ -81,7 +81,7 @@ profiles {
       submitRateLimit = '2/1.seconds'
       // Modify job-name, replace 'nf' with 'rr'
       // For whatever reason I can't access task.processor.name here so instead we do
-      // a string sub to achieve desired result
+      // a string sub to achieve desired result (nextflow 20.04.1)
       jobName = { "rr-${task.name}".replace(' ', '_') }
     }
 
