Use 'rd' job name prefix rather than 'rr'

--- a/nextflow.config
+++ b/nextflow.config
@@ -79,10 +79,10 @@ profiles {
       queueSize = params.queue_size
       // Submission rate to 2 per second
       submitRateLimit = '2/1.seconds'
-      // Modify job-name, replace 'nf' with 'rr'
+      // Modify job-name, replace 'nf' with 'rd'
       // For whatever reason I can't access task.processor.name here so instead we do
       // a string sub to achieve desired result (nextflow 20.04.1)
-      jobName = { "rr-${task.name}".replace(' ', '_') }
+      jobName = { "rd-${task.name}".replace(' ', '_') }
     }
 
     process {
